[tool.poetry]
name = "helsinki-rental-finder"
version = "0.1.0"
description = "A tool to help find rentals in Helsinki"
authors = ["Liam Brown <lbrown@rkh.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
Scrapy = "^2.8.0"
selenium = "^4.8.0"
finscraper = "^0.2.4"
geopandas = "^0.12.2"
geopy = {extras = ["aiohttp"], version = "^2.3.0"}
humanize = "^4.6.0"
jinja2 = "^3.1.2"
gracy = "^1.10.0"
loguru = "^0.6.0"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
